# issue-expander

./: .gitignore  .pre-commit-config.yaml  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  RELEASES.md  SECURITY.md  pyoxidizer.bzl  pyproject.toml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  main.yml
_docs/: devclone.txt  devvenv.txt  install-via-homebrew.txt  install-via-pipx.txt
changelog.d/: 20230125_013104_adamwolf_requests.md  20230125_154939_adamwolf_pyoxidizer_package.md  20230125_155231_adamwolf_pyoxidizer_package.md  20230125_224316_adamwolf_nousername.md  20230125_235414_adamwolf_releasing.md  20230126_212415_adamwolf_double.md  20230126_231054_adamwolf_refactor_owner.md  20230127_082654_adamwolf_pyversions.md  20230127_082754_adamwolf_changelog_pypi.md
src/issue_expander/: __main__.py  expander.py  issue_expander.py
tests/: conftest.py  test_cli.py  test_getIssue.py  test_gh_expansions.py  test_group_repo_expansions.py  test_issue_cache.py  test_multi_expansion.py  test_number_expansions.py  test_substituteMatch.py  test_url_expansion.py
